# type-inference

./: .gitignore  LICENSE  README.md  type-inference.cabal
src/: Main.lhs
src/Common/: BwdFwd.lhs  Names.lhs  PrettyPrint.lhs
src/Milner/: Infer.lhs  Test.lhs  Type.lhs  Unify.lhs  Zipper.lhs
src/PatternUnify/: Check.lhs  Context.lhs  Test.lhs  Tm.lhs  Unify.lhs
src/Units/: Group.lhs  GroupUnify.lhs  Infer.lhs  Test.lhs  Type.lhs  Type.lhs-boot  Unify.lhs
